Tools-app/PgAdmin/pgAdmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: tools-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin-server
  template:
    metadata:
      labels:
        app: pgadmin-server
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
