Tools-app/PgAdmin/pgAdmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: tools-app
  labels:
    name: pgadmin-server
spec:
  selector:
    app: pgadmin-server
  ports:
    - port: 80
      targetPort: 80
